@@ -32,7 +32,6 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAccessor;
 import java.util.*;
-import java.util.stream.Collectors;
 import org.photonvision.common.logging.LogGroup;
 import org.photonvision.common.logging.Logger;
 import org.photonvision.common.util.file.FileUtils;
@@ -214,7 +213,12 @@ class LegacyConfigProvider extends ConfigProvider {
 
         this.config =
                 new PhotonConfiguration(
-                        hardwareConfig, hardwareSettings, networkConfig, atfl, cameraConfigurations);
+                        hardwareConfig,
+                        hardwareSettings,
+                        networkConfig,
+                        atfl,
+                        new NeuralNetworkPropertyManager(),
+                        cameraConfigurations);
     }
 
     @Override
@@ -280,9 +284,7 @@ class LegacyConfigProvider extends ConfigProvider {
         HashMap<String, CameraConfiguration> loadedConfigurations = new HashMap<>();
         try {
             var subdirectories =
-                    Files.list(camerasFolder.toPath())
-                            .filter(f -> f.toFile().isDirectory())
-                            .collect(Collectors.toList());
+                    Files.list(camerasFolder.toPath()).filter(f -> f.toFile().isDirectory()).toList();
 
             for (var subdir : subdirectories) {
                 var cameraConfigPath = Path.of(subdir.toString(), "config.json");
@@ -348,7 +350,7 @@ class LegacyConfigProvider extends ConfigProvider {
                                                     return null;
                                                 })
                                         .filter(Objects::nonNull)
-                                        .collect(Collectors.toList())
+                                        .toList()
                                 : Collections.emptyList();
 
                 loadedConfig.driveModeSettings = driverMode;
@@ -483,5 +485,13 @@ class LegacyConfigProvider extends ConfigProvider {
 
     public void unloadCameraConfigs() {
         this.config.getCameraConfigurations().clear();
+    }
+
+    @Override
+    public boolean saveUploadedNeuralNetworkProperties(Path uploadPath) {
+        // I'm not implementing this cause nobody with the legacy config is gonna have one of these
+
+        System.exit(1);
+        return false;
     }
 }
