@@ -18,17 +18,17 @@
 package org.photonvision.common.dataflow.websocket;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.photonvision.PhotonVersion;
 import org.photonvision.common.configuration.NeuralNetworkModelManager;
 import org.photonvision.common.configuration.PhotonConfiguration;
+import org.photonvision.common.dataflow.networktables.NetworkTablesManager;
 import org.photonvision.common.hardware.Platform;
 import org.photonvision.common.networking.NetworkManager;
 import org.photonvision.common.networking.NetworkUtils;
 import org.photonvision.mrcal.MrCalJNILoader;
 import org.photonvision.raspi.LibCameraJNILoader;
 import org.photonvision.vision.processes.VisionModule;
-import org.photonvision.vision.processes.VisionModuleManager;
+import org.photonvision.vision.processes.VisionSourceManager;
 
 public class UIPhotonConfiguration {
     public List<UICameraConfiguration> cameraSettings;
@@ -49,21 +49,23 @@ public class UIPhotonConfiguration {
                                 NetworkManager.getInstance().networkingIsDisabled),
                         new UILightingConfig(
                                 c.getHardwareSettings().ledBrightnessPercentage,
-                                !c.getHardwareConfig().ledPins.isEmpty()),
+                                !c.getHardwareConfig().ledPins().isEmpty()),
                         new UIGeneralSettings(
                                 PhotonVersion.versionString,
                                 // TODO add support for other types of GPU accel
                                 LibCameraJNILoader.isSupported() ? "Zerocopy Libcamera Working" : "",
                                 MrCalJNILoader.getInstance().isLoaded(),
-                                NeuralNetworkModelManager.getInstance().getModels(),
+                                c.neuralNetworkPropertyManager().getModels(),
                                 NeuralNetworkModelManager.getInstance().getSupportedBackends(),
-                                c.getHardwareConfig().deviceName.isEmpty()
+                                c.getHardwareConfig().deviceName().isEmpty()
                                         ? Platform.getHardwareModel()
-                                        : c.getHardwareConfig().deviceName,
-                                Platform.getPlatformName()),
+                                        : c.getHardwareConfig().deviceName(),
+                                Platform.getPlatformName(),
+                                NetworkTablesManager.getInstance().conflictingHostname,
+                                NetworkTablesManager.getInstance().conflictingCameras),
                         c.getApriltagFieldLayout()),
-                VisionModuleManager.getInstance().getModules().stream()
+                VisionSourceManager.getInstance().getVisionModules().stream()
                         .map(VisionModule::toUICameraConfig)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 }
